// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Organisms/Tabs default 1`] = `
<div
  class="ui-tabs"
>
  <span
    class="ui-tabs__item"
  >
    Item 1
  </span>
  <span
    class="ui-tabs__item ui-tabs__item--active"
  >
    Item 2
  </span>
  <span
    class="ui-tabs__item"
  >
    Item 3
  </span>
</div>
`;

exports[`Storyshots Components/Organisms/Tabs info 1`] = `
<div
  class="ui-tabs"
>
  <span
    class="ui-tabs__item"
  >
    Item 1
  </span>
  <span
    class="ui-tabs__item ui-tabs__item--active"
  >
    Item 2
  </span>
  <span
    class="ui-tabs__item"
  >
    Item 3
  </span>
</div>
`;

exports[`Storyshots Components/Organisms/Tabs with custom render 1`] = `
<nav
  class="ui-tabs"
>
  <span
    class="ui-tabs__item"
  >
    Item 1
  </span>
  <span
    class="ui-tabs__item ui-tabs__item--active"
  >
    Item 2
  </span>
  <span
    class="ui-tabs__item"
  >
    Item 3
  </span>
</nav>
`;
